; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_commands.c_qtnf_cmd_resp_band_fill_vhtcap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_commands.c_qtnf_cmd_resp_band_fill_vhtcap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_sta_vht_cap = type { i32, i32, i32 }
%struct.ieee80211_vht_cap = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.ieee80211_sta_vht_cap*)* @qtnf_cmd_resp_band_fill_vhtcap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qtnf_cmd_resp_band_fill_vhtcap(i32* %0, %struct.ieee80211_sta_vht_cap* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ieee80211_sta_vht_cap*, align 8
  %5 = alloca %struct.ieee80211_vht_cap*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.ieee80211_sta_vht_cap* %1, %struct.ieee80211_sta_vht_cap** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.ieee80211_vht_cap*
  store %struct.ieee80211_vht_cap* %7, %struct.ieee80211_vht_cap** %5, align 8
  %8 = load %struct.ieee80211_sta_vht_cap*, %struct.ieee80211_sta_vht_cap** %4, align 8
  %9 = getelementptr inbounds %struct.ieee80211_sta_vht_cap, %struct.ieee80211_sta_vht_cap* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.ieee80211_vht_cap*, %struct.ieee80211_vht_cap** %5, align 8
  %11 = getelementptr inbounds %struct.ieee80211_vht_cap, %struct.ieee80211_vht_cap* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @le32_to_cpu(i32 %12)
  %14 = load %struct.ieee80211_sta_vht_cap*, %struct.ieee80211_sta_vht_cap** %4, align 8
  %15 = getelementptr inbounds %struct.ieee80211_sta_vht_cap, %struct.ieee80211_sta_vht_cap* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load %struct.ieee80211_sta_vht_cap*, %struct.ieee80211_sta_vht_cap** %4, align 8
  %17 = getelementptr inbounds %struct.ieee80211_sta_vht_cap, %struct.ieee80211_sta_vht_cap* %16, i32 0, i32 1
  %18 = load %struct.ieee80211_vht_cap*, %struct.ieee80211_vht_cap** %5, align 8
  %19 = getelementptr inbounds %struct.ieee80211_vht_cap, %struct.ieee80211_vht_cap* %18, i32 0, i32 0
  %20 = call i32 @memcpy(i32* %17, i32* %19, i32 4)
  ret void
}

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
